crates/tui/tests/snapshots/snapshots__nord_120x40.snap
---
source: crates/tui/tests/snapshots.rs
expression: text
---
Sheet1
A1  fx Hello
    │   A    │   B    │   C    │   D    │   E    │   F    │   G    │   H    │   I    │   J    │   K    │   L    │   M
   1│Hello   │  1234.5│TRUE    │overflows into next       │        │        │        │        │        │        │
   2│    2469│        │        │        │        │        │        │        │        │        │        │        │
   3│#DIV/0! │        │        │        │        │        │        │        │        │        │        │        │
   4│        │        │        │        │        │        │        │        │        │        │        │        │
   5│        │        │        │        │        │        │        │        │        │        │        │        │
   6│        │        │        │        │        │        │        │        │        │        │        │        │
   7│        │        │        │        │        │        │        │        │        │        │        │        │
   8│        │        │        │        │        │        │        │        │        │        │        │        │
   9│        │        │        │        │        │        │        │        │        │        │        │        │
  10│        │        │        │        │        │        │        │        │        │        │        │        │
  11│        │        │        │        │        │        │        │        │        │        │        │        │
  12│        │        │        │        │        │        │        │        │        │        │        │        │
  13│        │        │        │        │        │        │        │        │        │        │        │        │
  14│        │        │        │        │        │        │        │        │        │        │        │        │
  15│        │        │        │        │        │        │        │        │        │        │        │        │
  16│        │        │        │        │        │        │        │        │        │        │        │        │
  17│        │        │        │        │        │        │        │        │        │        │        │        │
  18│        │        │        │        │        │        │        │        │        │        │        │        │
  19│        │        │        │        │        │        │        │        │        │        │        │        │
  20│        │        │        │        │        │        │        │        │        │        │        │        │
  21│        │        │        │        │        │        │        │        │        │        │        │        │
  22│        │        │        │        │        │        │        │        │        │        │        │        │
  23│        │        │        │        │        │        │        │        │        │        │        │        │
  24│        │        │        │        │        │        │        │        │        │        │        │        │
  25│        │        │        │        │        │        │        │        │        │        │        │        │
  26│        │        │        │        │        │        │        │        │        │        │        │        │
  27│        │        │        │        │        │        │        │        │        │        │        │        │
  28│        │        │        │        │        │        │        │        │        │        │        │        │
  29│        │        │        │        │        │        │        │        │        │        │        │        │
  30│        │        │        │        │        │        │        │        │        │        │        │        │
  31│        │        │        │        │        │        │        │        │        │        │        │        │
  32│        │        │        │        │        │        │        │        │        │        │        │        │
  33│        │        │        │        │        │        │        │        │        │        │        │        │
  34│        │        │        │        │        │        │        │        │        │        │        │        │
  35│        │        │        │        │        │        │        │        │        │        │        │        │
  36│        │        │        │        │        │        │        │        │        │        │        │        │
READY  A1  Cnt 1  Auto  *  nord  100%
