crates/tui/tests/snapshots/snapshots__nord_200x60.snap
---
source: crates/tui/tests/snapshots.rs
expression: text
---
Sheet1
A1  fx Hello
    │   A    │   B    │   C    │   D    │   E    │   F    │   G    │   H    │   I    │   J    │   K    │   L    │   M    │   N    │   O    │   P    │   Q    │   R    │   S    │   T    │   U    │  V
   1│Hello   │  1234.5│TRUE    │overflows into next       │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
   2│    2469│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
   3│#DIV/0! │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
   4│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
   5│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
   6│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
   7│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
   8│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
   9│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  10│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  11│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  12│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  13│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  14│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  15│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  16│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  17│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  18│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  19│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  20│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  21│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  22│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  23│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  24│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  25│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  26│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  27│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  28│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  29│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  30│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  31│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  32│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  33│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  34│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  35│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  36│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  37│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  38│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  39│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  40│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  41│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  42│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  43│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  44│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  45│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  46│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  47│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  48│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  49│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  50│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  51│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  52│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  53│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  54│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  55│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
  56│        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │        │
READY  A1  Cnt 1  Auto  *  nord  100%
